# UBBCluj

./: README.md
Semester 1/CSA/: Seminar.docx  new 1.asm  new 1.lst  read.asm  (+1 more)
Semester 2/Oop/3-4/: CMakeLists.txt
Semester 2/Oop/3-4/3-4/: 3-4.sln
Semester 2/Oop/3-4/3-4/3-4/: 3-4.vcxproj  3-4.vcxproj.filters  main.c
Semester 2/Oop/3-4/3-4/3-4/Debug/: vc143.idb
Semester 2/Oop/3-4/3-4/3-4/Debug/3-4.tlog/: 3-4.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Semester 2/Oop/3-4/3-4/3-4/x64/Debug/: vc143.idb
Semester 2/Oop/3-4/3-4/3-4/x64/Debug/3-4.tlog/: 3-4.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Semester 2/Oop/A3-4/: CMakeLists.txt  CppProperties.json
Semester 2/Oop/A3-4/A3-4/: A3-4.sln
Semester 2/Oop/A3-4/A3-4/A3-4/: Agency.sln
Semester 2/Oop/A3-4/A3-4/A3-4/Debug/: vc143.idb
Semester 2/Oop/A3-4/A3-4/A3-4/Debug/A3-4.tlog/: A3-4.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Semester 2/Oop/A3-4/A3-4/A3-4/Debug/x64/Debug/: Agency.ilk  vc143.idb
Semester 2/Oop/A3-4/A3-4/A3-4/Debug/x64/Debug/Agency.tlog/: Agency.lastbuildstate  CL.write.1.tlog
Semester 2/Oop/A3-4/A3-4/A3-4/Refrigerator/: A3-4.vcxproj  domain.c  domain.h  dynamicArray.c  repository.c  repository.h  service.c  service.h  ui.c  ui.h  undoRedo.c
Semester 2/Oop/A3-4/A3-4/A3-4/Refrigerator/Debug/: vc143.idb
Semester 2/Oop/A3-4/A3-4/A3-4/Refrigerator/Debug/A3-4.tlog/: A3-4.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Semester 2/Oop/A3-4/A3-4/A3-4/Refrigerator/Debug/x64/Debug/: Agency.exe.recipe
(+129 files in other folders)
